# epoll-timer

./: .gitignore  CMakeLists.txt  README.md
benchmark/: CMakeLists.txt
benchmark/include/: Utils.hpp
benchmark/src/: MultiTaskScheduleBenchmark.cpp  MultiTaskkScheduleBenchmarkFolly.cpp  benchmark.cpp
cmake/: EpollTimerConfig.cmake  Util.cmake
include/: EpollTimer.hpp  Utils.hpp
src/: EpollTimer.cpp  Utils.cpp  main.cpp
test/: CMakeLists.txt
test/src/: EpollTimerTest.cpp
